CHANGES.txt - 2009-06-05
------------------------

CHANGES IN CUPS V1.4rc1

	- The IPP backend now reconnects after every request when talking to
	  printers that claim IPP support but only use HTTP/1.0.
	- The PPD compiler crashed when both "Resolution" and "Group foo Option
	  Resolution" were specified in the .drv file.
	- The PPD compiler's #if/#elif/#else/#endif did not work for undefined
	  variables (STR #3210)
	- Static libraries could not be installed by a non-root user on systems
	  needing a ranlib program (STR #3209)
	- The scheduler incorrectly always tried to copy Kerberos credentials
	  for print jobs.
	- Updated the Spanish localization (STR #3204)
	- The scheduler crashed when getting the default paper size from
	  libpaper (STR #3205, STR #3206)
	- The PPD compiler now defines six variables: CUPS_VERSION,
	  CUPS_VERSION_MAJOR, CUPS_VERSION_MINOR, CUPS_VERSION_PATCH,
	  PLATFORM_NAME, and PLATFORM_ARCH (STR #3203)
	- Fixed a whitespace skipping bug in cupsRasterInterpretPPD.
	- The scheduler did not return HTTP 403 (Forbidden) for authenticated
	  users that were not authorized to do IPP operations (STR #3193)
	- The scheduler did not report more than 8 Product strings from a PPD
	  file.  Some PPD files have as many as 24.
	- ppdOpen*() could crash if a keyword had no value string (something
	  that cupstestppd looks for...)
	- cupsLangDefault() did not return the correct language on Mac OS X.
	- The Mac OS X USB backend did not handle aborted or stalled pipe
	  conditions properly, which prevented drivers from ejecting partial
	  pages when a job was canceled or held.


CHANGES IN CUPS V1.4b3

	- Documentation fixes (STR #3044, STR #3057, STR #3153, STR #3158,
	  STR #3173)
	- Added complete localizations for German, Japanese, Polish, and
	  Russian and partial localizations for Chinese, Danish, Finnish,
	  French, Italian, Korean, Norwegian, Portuguese, and Swedish
	  (STR #3096, STR #3098, STR #3109, STR #3111, STR #3141)